[package]
name = "api2"
version = "0.1.0" 
authors = ["didierboivin"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres","64-column-tables","r2d2" ,"chrono","numeric"] }
r2d2-diesel = "1.0.0"
#r2d2 = "0.8.9"
#features = [..., "64-column-tables"] 
dotenv = "0.15.0"
diesel_cli_ext = "0.3.5"
#bigdecimal = "0.0.14"
bigdecimal = { version = "0.0.14", features = ["serde"] }

diesel_full_text_search = "*"
#diesel_codegen = { version="*", features =["postgres"] }
serde = { version = "1.0.116"}

serde_derive  = "*"
serde_json = "*"

actix-web = "3.1.0"
actix-rt = "*"
actix = "*"

chrono = { version = "0.4", features = ["serde"] }

lazy_static = "1.4.0"
juniper ="0.14.2"
juniper-from-schema = "0.5.2"
juniper-eager-loading = "0.5.1"

env_logger = "0.8.1"
futures = "0.3"
